<resources>
    <string name="app_name">Quiz\"R\&quot;Us</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>

    <string name="action_settings">Settings</string>
    <string name="student_records_system">Student Records System</string>
    <string name="title_activity_students">SRSYS: Students</string>
    <string name="title_activity_courses">SRSYS: Courses</string>
    <string name="title_activity_student_courses">SRSYS: Student Course History</string>
    <string name="title_activity_course_students">SRSYS: Course Registrations</string>
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="registrations">Registrations</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="course_id">Course ID</string>
    <string name="gpa">GPA</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="time_s_up">Time\'s up!</string>
    <string name="no_quiz_name">No Quiz Name</string>
    <string name="please_enter_a_quiz_name">Please enter a quiz name</string>
    <string name="not_a_number">Not a number</string>
    <string name="please_enter_a_number_into_the_timer_field">Please enter a number into the timer field</string>
    <string name="save_question">Save Question</string>
    <string name="no_questions_entered">No questions entered</string>
    <string name="sorry_please_enter_at_least_one_question_with_answers">Sorry, please enter at least one question with answers.</string>
    <string name="registering">Registering...</string>
    <string name="invalid_sign_up">Oops, Something\'s Missing...</string>
    <string name="failed_to_log_in">Failed to Log In</string>
    <string name="login_information_cannot_be_empty">Login information cannot be empty</string>
    <string name="logging_in">Logging In...</string>
    <string name="incorrect_username_or_password_please_try_again">Incorrect username or password. Please try again.</string>
    <string name="log_in">Log In</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="start">Start</string>
    <string name="quiz_name">Quiz Name:</string>
    <string name="quiz_create">Quiz Create:</string>
    <string name="time_seconds">Time (Seconds):</string>
    <string name="edit_questions">Edit Questions</string>
    <string name="add_questions">Add questions:</string>
    <string name="question">Question...</string>
    <string name="correct_answer">Correct Answer...</string>
    <string name="wrong_answer">Wrong Answer...</string>
    <string name="done">Done</string>
    <string name="enter_search_text">Enter search text</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="or">Or</string>
    <string name="this_quiz_hasn_t_been_attempted_yet">This quiz hasn’t been attempted yet</string>
    <string name="empty_display">-</string>
    <string name="attempts">Attempts</string>
    <string name="your_high_score">Your High Score</string>
    <string name="_1000">1000</string>
    <string name="_0_1">0/1</string>
    <string name="_0s">0s</string>
    <string name="deletion_is_disabled_as_you_are_not_the_owner_of_this_quiz">(Deletion is disabled as you are not the owner of this quiz)</string>
    <string name="search_result_message">%1$d results found from \"%2$s\"</string>
    <string name="no_question_entered">No question entered</string>
    <string name="sorry_please_enter_a_question_for_this_quiz">Sorry, please enter a question for this quiz.</string>
    <string name="missing_answer">Missing answer</string>
    <string name="sorry_please_enter_all_answers_to_this_question">Sorry, please enter all answers to this question.</string>
    <string name="created_by">Created by %1$s</string>
    <string name="time_limit_text">Time limit: %1$d%2$s</string>
    <string name="question_number_text">No. of Questions: %1$d</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="are_you_sure_you_want_to_delete_this_quiz_this_action_cannot_be_undone">Are you sure you want to delete this quiz? This action cannot be undone.</string>
</resources>
