<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.PreviewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/arrow_back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="285dp"
            android:layout_height="53dp"
            android:maxHeight="80dp"
            android:minHeight="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/quizruslogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonBack"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/preview_background"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quizTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:gravity="center_horizontal"
                android:text="Hello, I am under the water"
                android:textColor="@color/colorWhite"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/creatorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="Created by Testing"
                android:textColor="@color/colorPaleWhite"
                android:textSize="20sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/timeLimitTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="Time limit: 100s"
                    android:textColor="@color/colorPaleWhite"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/questionNumberTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="No. of questions: 5"
                    android:textColor="@color/colorPaleWhite"
                    android:textSize="20sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/question_option_button_right"
                android:gravity="center"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="40sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="30dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/buttonDeleteQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/question_option_button_wrong"
                android:gravity="center"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/deleteTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deletion_is_disabled_as_you_are_not_the_owner_of_this_quiz"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPaleWhite"
                android:textStyle="italic"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:background="@drawable/white_boarder_background"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/your_high_score"
                    android:textColor="@color/colorWhite"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/userHighScoreTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/grey_borderless_background"
                    android:gravity="center_horizontal"
                    android:minWidth="150dp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/empty_display"
                    android:textColor="@color/colorWhite"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/userAttemptsTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/grey_borderless_background"
                        android:gravity="center_horizontal"
                        android:minWidth="50dp"
                        android:paddingHorizontal="20dp"
                        android:text="@string/empty_display"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/attempts"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:background="@drawable/white_boarder_background"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leaderboard"
                    android:textColor="@color/colorWhite"
                    android:textSize="40sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/leaderboardRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    tools:listitem="@layout/activity_leaderboard_row" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>